--- a/404.md
+++ b/404.md
@@ -4,6 +4,44 @@ title: 404 - Page not found
 permalink: /404.html
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+<div class="center-content">
+  <h1 class="page-title">{{ page.title }}</h1>
+  <p>Sorry, we can't find the page you're looking for. You can try again by going <a href="{{ site.baseurl }}/">back to the homepage</a>.</p>
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+  <a href="{{ site.baseurl }}/">
+    <img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" class="center-image"/>
+  </a>
+</div>
+
+<style>
+  .center-content {
+    text-align: center;
+    margin: 0 auto;
+    padding: 40px 20px;
+  }
+
+  .center-content .page-title {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+  }
+
+  .center-image {
+    width: 400px;
+    margin: 20px auto;
+  }
+
+  /* Light mode styles */
+  body.light .center-content {
+    color: #333;
+  }
+
+  /* Dark mode styles */
+  body.dark .center-content {
+    color: #fff;
+  }
+
+  body.dark .center-image {
+    filter: brightness(0.8); /* Adjust image brightness for dark mode */
+  }
+
+</style>
